# mmlabc-to-smf-rust

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  OPTION_A_IMPLEMENTATION.md  OPTION_B_INVESTIGATION.md  PR_TITLE_UPDATE.md  README.ja.md  README.md  WASI_REACTOR_VERIFICATION.md  WASM_IMPLEMENTATION.md  _config.yml  build-wasm.sh  build.rs  index.html  mmlabc-to-smf-rust.toml.example  package-lock.json
.github/: IMPLEMENTATION_SUMMARY.md  check-large-files.toml  copilot-instructions.md
.github/scripts/: README.md  create-build-failure-issue.js
.github/workflows/: build-wasm-emscripten.yml  call-daily-project-summary.yml  call-issue-note.yml  call-mmlabc-to-smf-rust-windows-cargo-check.yml  deploy-github-pages.yml
demo/: .gitignore  AGENTS.md  FEATURES.md  README.md  index.html  package.json  serve.py  test-loader.mjs  test-register.mjs
demo-library/: README.md  index.html  package.json
demo/src/: audioPlayback.ts  audioRenderer.ts  main.ts  midiReader.ts  mmlConverter.ts  parseMidiNotes.ts  smfToYm2151.ts  state.ts  treeToJSON.ts  ui.ts  visualization.ts  wavExport.ts
demo/tests/: audioBufferToWav.test.ts  midiReader.test.ts  parseMidiNotes.test.ts  treeToJSON.test.ts
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
issue-notes/: 103.md  105.md  109.md  111.md  113.md  115.md  117.md  119.md  121.md  123.md  125.md  127.md  129.md  131.md  133.md  14.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  30.md  36.md  37.md  39.md  40.md  42.md  44.md  46.md  48.md  50.md  52.md  54.md  55.md  56.md  62.md  64.md  (+16 more)
mmlabc-to-smf-wasm/: Cargo.toml  README.md  build.rs
mmlabc-to-smf-wasm/src/: lib.rs  pass2_ast.rs  pass3_events.rs  pass4_midi.rs  token_extractor.rs  types.rs
mmlabc-to-smf-wasm/tests/: parity.rs
scripts/: README.md  build-demo.sh  setup-emscripten.sh  transform-demo-paths.sh
src/: attachment_json.rs  config.rs  lib.rs  main.rs  mml_preprocessor.rs  parse_tree_tokens.rs  pass1_parser.rs  pass2_ast.rs  pass3_events.rs  pass4_midi.rs  tree_sitter_mml.rs  types.rs  wasm_compat.rs
tests/: integration_test.rs  test_attachment_json.rs  test_c1_vs_c64.rs  test_channel.rs  test_chord.rs  test_cli.rs  test_config.rs  test_dotted_notes.rs  test_drum_channel.rs  test_issue_debug.rs  test_key_transpose.rs  test_length.rs  test_library_api.rs  test_modifier.rs  test_note_length.rs  test_octave.rs  test_pass1.rs  test_pass2.rs  test_pass3.rs  test_pass4.rs  test_program_change.rs  test_rest.rs  test_tempo.rs  test_velocity.rs
tests/test_chord/: basic.rs  length.rs  octave.rs
tree-sitter-mml/: grammar.js  package.json  tree-sitter-mml.wasm
tree-sitter-mml/src/: grammar.json  node-types.json  parser.c
