[package]
name = "mmlabc-to-smf"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "Music Macro Language to Standard MIDI File converter"

[[bin]]
name = "mmlabc-to-smf"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
midly = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tree-sitter = "0.22"

[dev-dependencies]
