[package]
name = "mmlabc-to-smf"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "Music Macro Language to Standard MIDI File converter"

[lib]
name = "mmlabc_to_smf"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "mmlabc-to-smf"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
midly = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tree-sitter = "0.22"

[dev-dependencies]
tempfile = "3.12"
