[package]
name = "mmlabc-to-smf"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "Music Macro Language to Standard MIDI File converter"

[lib]
name = "mmlabc_to_smf"
path = "src/lib.rs"

[[bin]]
name = "mmlabc-to-smf"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["tree-sitter", "clap", "cc"]

[build-dependencies]
cc = { version = "1.0", optional = true }

[dependencies]
midly = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = "1.0"
thiserror = "1.0"
tree-sitter = { version = "0.22", optional = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3.12"
