[package]
name = "mmlabc-to-smf-wasm"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "WASM bindings for MML to SMF converter"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.0"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midly = "0.5"
anyhow = "1.0"
thiserror = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
